# japi-base-editor

./: .gitignore  .gitmodules  LICENSE  README.md  context.md
Font Editor/: README.txt  bdf_to_font_h.py  font_8x12.h  font_h_to_bdf.py  japi_8x12.bdf
editor/: help_text.h  jbe.c  jbe.h  jbe_main.c  jbe_main_pico.c  jbe_test.c  ui_filelist.c  ui_filelist.h
pico/: CMakeLists.txt
sim/: .gitignore  Makefile  README.md  seam_app.c  setup.sh  sim_demo.c  sim_test.c
sim/simdisk_A/: demo.z80  scratch.txt
tools/: gen_starry.py  make-screenshots.sh  make_pdf.py  screenshot.c  synth_demo.py
tools/fonts/: README.md
